Update build scripts (#88)
* Update build scripts

* Fix package path

* Upgrade frontend

* Upgrade eslint

* Upgrade backend

* Update infrastructure

* Simplify configuration

* Replace yaml with json configuration

* Update java version

* Configure log groups

* Format on save

* Simplify cors configuration

* Code cleanup

* Code cleanup

* Fix deprecation warning

* Rename sonar config

* Fix linter warnings

* Update eslint config for infrastructure

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>